# WealthNestAssignment

./: README.md  main.py  pyproject.toml  setup.sql
core/: auth_utils.py  config.py  price_utils.py  security.py
data/: prices.json
db/: database.py  models.py  schemas.py  test.db
routes/: base.py  instrument_routes.py  login_routes.py  portfolio_routes.py  transaction_routes.py  user_routes.py
